--- a/CoreShoppingAdminPortal/Views/Account/Home.cshtml
+++ b/CoreShoppingAdminPortal/Views/Account/Home.cshtml
@@ -4,7 +4,7 @@
 }
 @using Microsoft.AspNetCore.Http;
 
-<center><h2>Home Page</h2></center>
+<center><h2>Home </h2></center>
 
 @*<meta name="viewport" content="width=device-width" />
     <title>Home</title>
