--- a/EcommerceUserPanel/Views/Cart/Checkout.cshtml
+++ b/EcommerceUserPanel/Views/Cart/Checkout.cshtml
@@ -83,7 +83,7 @@
                 <ul class="list-group mb-3">
                     <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <span class="text-muted">
-                            <h6 class="my-0" style="font-weight:bold;">Product Name</h6>
+                            <h6 class="my-0" style="font-weight:bold;">Name</h6>
                         </span>
                         <span class="text-muted">
                             <h6 class="my-0" style="font-weight:bold;">Price</h6>
@@ -92,6 +92,7 @@
                             <h6 class="my-0" style="font-weight:bold;">Quantity</h6>
                         </span>
                         <span class="text-muted">
+                            
                             <h6 class="my-0" style="font-weight:bold;">Sub Total</h6>
                         </span>
                     </li>
@@ -178,11 +179,11 @@
                                 Please enter a valid email address for shipping updates.
                             </div>
                         </div>
-                        <div class="mb-3">
+                        @*<div class="mb-3">
                             <label asp-for="Password">Password <span class="text-muted"></span></label>
                             <input asp-for="Password" required type="password" class="form-control" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
 
-                        </div>
+                        </div>*@
 
                         <h4 class="mb-3">Billing address</h4>
                         <div class="mb-3">
