--- a/EcommerceUserPanel/Views/Cart/Index.cshtml
+++ b/EcommerceUserPanel/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿ @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
@@ -39,6 +39,6 @@
 </table>
 <br />
 <a asp-controller="Home" asp-action="Index">Continue Shopping</a>
-<a asp-controller="Customer" asp-action="Login">CheckOut</a>
+<a asp-controller="Cart" asp-action="CheckOut">CheckOut</a>
 
 <script src="~/js/sites.js"></script>
