--- a/EcommerceUserPanel/Views/Customer/Create.cshtml
+++ b/EcommerceUserPanel/Views/Customer/Create.cshtml
@@ -4,31 +4,44 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
-<form asp-action="Create" asp-controller="Customer">
+<style>
+    .p{
+        margin-left:10px;
+    }
+</style>
+<form asp-action="Register" asp-controller="Customers">
     <div class="row">
-        <h4 class="col-12 mb-3">Basic Details</h4>
+        <h4 class="col-12 mb-3">Register</h4>
         <div class="col-md-6 mb-3">
 
             <label asp-for="FirstName"><b>First Name</b></label>
-            <input type="text" asp-for="FirstName" class="form-control" placeholder="Enter First Name">
+            <input type="text" asp-for="FirstName" class="form-control" placeholder="Enter First Name" required>
 
         </div>
         <div class="col-md-6 mb-3">
             <label asp-for="LastName"><b>Last Name</b></label>
-            <input type="text" asp-for="LastName" class="form-control" placeholder="Enter Last Name">
+            <input type="text" asp-for="LastName" class="form-control" placeholder="Enter Last Name" required>
 
         </div>
         <div class="col-12 mb-3">
             <label asp-for="Username"><b>User Name</b></label>
-            <input type="text" asp-for="Username" class="form-control" placeholder="Enter User Name">
+            <input type="text" asp-for="Username" class="form-control" placeholder="Enter User Name" required>
+        </div>
+        <div class="col-12 mb-3">
+            <label asp-for="Gender"><b>Gender</b> </label>
+            <select asp-for="Gender" id="Gender" class="form-control">
+                <option value="">Selected</option>
+                <option>Male</option>
+                <option>Female</option>
+            </select>
         </div>
         <div class="col-12 mb-3">
             <label asp-for="Password"><b>Password</b></label>
-            <input type="text" asp-for="Password" class="form-control" placeholder="Enter Password">
+            <input type="password" asp-for="Password" class="form-control" placeholder="Enter Password" required>
         </div>
         <div class="col-12 mb-3">
             <label asp-for="EmailId"><b>Email</b></label>
-            <input type="email" asp-for="EmailId" class="form-control" placeholder="Enter Email">
+            <input type="email" asp-for="EmailId" class="form-control" placeholder="Enter Email" required>
         </div>
 
         <br />
@@ -39,39 +52,97 @@
 
         <div class="col-12 mb-3">
             <label asp-for="Address"><b>Address</b></label>
-            <input type="text" asp-for="Address" class="form-control" placeholder="Enter Address">
+            <input type="text" asp-for="Address" class="form-control" placeholder="Enter Address" required>
         </div>
+
+
         <div class="col-12 mb-3">
-            <label asp-for="State"><b>State</b></label>
-            <input type="text" asp-for="State" class="form-control" placeholder="Enter City">
+            <label asp-for="Country"><b>Country</b></label>
+            <select asp-for="Country" id="Country" class="form-control" required>
+                <option value="">Select Country</option>
+                <option>Afghanistan</option>
+                <option>Bhutan</option>
+                <option>Bolivia</option>
+                <option>Canada</option>
+                <option>Cape Verde</option>
+                <option>Dominica</option>
+                <option>Dominican Republic</option>
+                <option>East Timor</option>
+                <option>Ecuador</option>
+                <option>Egypt</option>
+                <option>Ethiopia</option>
+                <option>Finland</option>
+                <option>France</option>
+                <option>Greece</option>
+                <option>Greenland</option>
+                <option>Grenada</option>
+                <option>Guyana</option>
+                <option>Haiti</option>
+                <option>Hungary</option>
+                <option>Iceland</option>
+                <option>India</option>
+                <option>Indonesia</option>
+            </select>
         </div>
 
         <div class="col-12 mb-3">
-            <b>Country</b>
-            <select class="w-100" id="country">
-                <option value="usa">United States</option>
-                <option value="uk">United Kingdom</option>
-                <option value="ger">Germany</option>
-                <option value="fra">France</option>
-                <option value="ind">India</option>
-                <option value="aus">Australia</option>
-                <option value="bra">Brazil</option>
-                <option value="cana">Canada</option>
+            <label asp-for="State"><b>State</b></label>
+            <select asp-for="State" id="State" class="form-control" required>
+                <option value="">Select State</option>
+                <option>Andaman and Nicobar Islands</option>
+                <option>Andhra Pradesh</option>
+                <option>Arunachal Pradesh</option>
+                <option>Assam</option>
+                <option>Bihar</option>
+                <option>Chandigarh</option>
+                <option>Chhattisgarh</option>
+                <option>Dadra and Nagar Haveli</option>
+                <option>Daman and Diu</option>
+                <option>Delhi</option>
+                <option>Goa</option>
+                <option>Gujarat</option>
+                <option>Haryana</option>
+                <option>Himachal Pradesh</option>
+                <option>Jammu and Kashmir</option>
+                <option>Jharkhand</option>
+                <option>Karnataka</option>
+                <option>Kerala</option>
+                <option>Lakshadweep</option>
+                <option>Madhya Pradesh</option>
+                <option>Maharashtra</option>
+                <option>Manipur</option>
+                <option>Meghalaya</option>
+                <option>Mizoram</option>
+                <option>Nagaland</option>
+                <option>Orissa</option>
+                <option>Pondicherry</option>
+                <option>Punjab</option>
+                <option>Rajasthan</option>
+                <option>Sikkim</option>
+                <option>Tamil Nadu</option>
+                <option>Tripura</option>
+                <option>Uttaranchal</option>
+                <option>Uttar Pradesh</option>
+                <option>West Bengal</option>
             </select>
         </div>
+
+
         <div class="col-md-6 mb-3">
             <label asp-for="Zip"><b>Zip Code</b></label>
-            <input type="text" asp-for="Zip" class="form-control" placeholder="Enter Zip Code">
+            <input type="text" asp-for="Zip" class="form-control" placeholder="Enter Zip Code" required>
         </div>
         <div class="col-md-6 mb-3">
             <label asp-for="PhoneNo"><b>PhoneNo</b></label>
-            <input type="text" asp-for="PhoneNo" class="form-control" placeholder="Enter Contact">
+            <input type="text" asp-for="PhoneNo" class="form-control" placeholder="Enter PhoneNo" required>
         </div>
 
 
         <hr class="mb-4">
 
 
-        <a asp-controller="Customer" asp-action="Login" class="btn btn-lg btn-primary btn-block">Submit</a>
-</div>
+
+
+    </div>
+    <button type="submit" class="btn btn-sm btn-success p">Submit</button>
 </form>
