--- a/EcommerceUserPanel/Views/Shared/_UserLayout.cshtml
+++ b/EcommerceUserPanel/Views/Shared/_UserLayout.cshtml
@@ -1,13 +1,17 @@
 ﻿@using Microsoft.AspNetCore.Http;
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/Template.css" />
+
 </head>
+    
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand"asp-controller="Home" asp-action="Index"
+6>Shopping Mania</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,7 +36,24 @@
                 </li>
             </ul>
             <form class="form-inline my-3 my-lg-0">
-               <a asp-controller="Cart" asp-action="Index" class="btn btn-success" >View Cart<sup style="font-size:large">@Context.Session.GetString("cartitem")</sup></a>
+                <label class="form-control">
+                    Welcome @Context.Session.GetString("uname")
+                </label>
+
+                &nbsp;       &nbsp;
+
+                <a asp-controller="Cart" asp-action="Index" class="btn btn-success"><img src="https://img.icons8.com/material-rounded/24/000000/add-shopping-cart.png">@Context.Session.GetString("cartitem") </a>
+
+                &nbsp;       &nbsp;
+                @if (Context.Session.GetString("uname") == null)
+                {
+                    <a class="btn btn-info" asp-action="Login" asp-controller="Customer">Login</a>
+                }
+                else
+                {
+                    <a class="btn btn-info" asp-action="Logout" asp-controller="Customer">Logout</a>
+                }
+                @*<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">*@
             </form>
             </div>
         </nav>
