--- a/EcommerceUserPanel/Views/Customer/Login.cshtml
+++ b/EcommerceUserPanel/Views/Customer/Login.cshtml
@@ -11,7 +11,7 @@
 <h2>Login</h2>
 
 <body class="text-center">
-    <form class="form-signin" method="post" asp-controller="Customer" asp-action="login">
+    <form class="form-signin" method="post" asp-controller="Customer" asp-action="Login">
         <img class="mb-4" src="~/images/shopping-mania.jpg" alt="" width="250" height="150">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <p>@ViewBag.Error</p>
