updated on 13april

--- a/EcommerceUserPanel/Views/Brand/BrandDisplay.cshtml
+++ b/EcommerceUserPanel/Views/Brand/BrandDisplay.cshtml
@@ -1,13 +1,10 @@
 ﻿@model IEnumerable<EcommerceUserPanel.Models.Products>
 @{
-    ViewData["Title"] = "Display";
+    ViewData["Title"] = "BrandDisplay";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
-
-
-<h2>ProductDisplay</h2>
-
+<h2>Brand Display</h2>
 <div class="album py-5 bg-light">
     <div class="container">
 
@@ -41,3 +38,5 @@
         </div>
     </div>
 </div>
+
+
