--- a/CoreShoppingAdminPortal/Views/Product/Create.cshtml
+++ b/CoreShoppingAdminPortal/Views/Product/Create.cshtml
@@ -40,6 +40,10 @@
             <input type="text" class="form-control" placeholder="Text" asp-for="ProductCategoryId">
         </div>
     </div>
+    <label for="text" class="col-sm-2 col-form-label" asp-for="BrandId">BrandId</label>
+    <div class="col-sm-10">
+        <select class="form-control" asp-for="BrandId" asp-items="ViewBag.products2"></select>
+    </div> <br />
     <center>
         <input type="submit" value="submit" class="btn btn-success" />&nbsp;
         <button class="btn btn-success" asp-controller="Product" asp-action="Index">Back</button>
