--- a/CoreShoppingAdminPortal/Views/Product/Edit.cshtml
+++ b/CoreShoppingAdminPortal/Views/Product/Edit.cshtml
@@ -37,6 +37,10 @@
             <select class="form-control" asp-for="VendorId" asp-items="ViewBag.Vendor"></select>
         </div>
     </div>
+    <div class="col-sm-10">
+        <select class="form-control" asp-for="BrandId" asp-items="ViewBag.Brand"></select>
+    </div>
+    <br />
     <center>
         <input type="submit" value="Edit" class="btn btn-success" />&nbsp;
         <button class="btn btn-success" asp-controller="Product" asp-action="Index">Back</button>
