--- a/EcommerceUserPanel/Views/Home/HomePage.cshtml
+++ b/EcommerceUserPanel/Views/Home/HomePage.cshtml
@@ -49,23 +49,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <!-- header-bot -->
             <div class="col-md-4 agileits-social top_content">
                 <ul class="social-nav model-3d-0 footer-social w3_agile_social">
-                    <li class="share">Share On : </li>
+                    @*<li class="share">Share On : </li>
                     <li>
                         <a href="#" class="facebook">
                             <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
                             <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div>
                         </a>
-                    </li>
+                    </li>*@
                     <li>
                         <a href="#" class="twitter">
-                            <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
-                            <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+                            @*<div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+                            <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div>*@
                         </a>
                     </li>
                     <li>
                         <a href="#" class="instagram">
-                            <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
-                            <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+                            @*<div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+                            <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div>*@
                         </a>
                     </li>
                     <li>
@@ -102,9 +102,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav menu__list">
                                 <li class="active menu__item menu__item--current"><a class="menu__link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
-                                <li class=" menu__item"><a class="menu__link" href="about.html">About</a></li>
+                                <li class=" menu__item"><a class="menu__link" asp-controller="Home" asp-action="">About</a></li>
                                 <li class="dropdown menu__item">
-                                    <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Men's wear <span class="caret"></span></a>
+                                    @*<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Men's wear <span class="caret"></span></a>*@
                                     <ul class="dropdown-menu multi-column columns-3">
                                         <div class="agile_inner_drop_nav_info">
                                             <div class="col-sm-6 multi-gd-img1 multi-gd-text ">
@@ -137,7 +137,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     </ul>
                                 </li>
                                 <li class="dropdown menu__item">
-                                    <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Women's wear <span class="caret"></span></a>
+                                    @*<a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Women's wear <span class="caret"></span></a>*@
                                     <ul class="dropdown-menu multi-column columns-3">
                                         <div class="agile_inner_drop_nav_info">
                                             <div class="col-sm-3 multi-gd-img">
@@ -350,7 +350,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="carousel-caption">
                         <h3>The Biggest <span>Sale</span></h3>
                         <p>Special for today</p>
-                        <a class="hvr-outline-out button2" href="~/images/New folder/banner5.jpg">Shop Now </a>
+                        <a class="hvr-outline-out button2" href="~/images/banner5.jpg">Shop Now </a>
                     </div>
                 </div>
             </div>
@@ -359,7 +359,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="carousel-caption">
                         <h3>Summer <span>Collection</span></h3>
                         <p>New Arrivals On Sale</p>
-                        <a class="hvr-outline-out button2" href="~/images/New folder/banner1.jpg">Shop Now </a>
+                        <a class="hvr-outline-out button2" href="~/images/banner1.jpg">Shop Now </a>
                     </div>
                 </div>
             </div>
@@ -368,7 +368,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="carousel-caption">
                         <h3>The Biggest <span>Sale</span></h3>
                         <p>Special for today</p>
-                        <a class="hvr-outline-out button2" href="~/images/New folder/bottom2.jpg">Shop Now </a>
+                        <a class="hvr-outline-out button2" href="~/images/bottom2.jpg">Shop Now </a>
                     </div>
                 </div>
             </div>
@@ -377,7 +377,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="carousel-caption">
                         <h3>Summer <span>Collection</span></h3>
                         <p>New Arrivals On Sale</p>
-                        <a class="hvr-outline-out button2" href="~/images/New folder/banner3.jpg">Shop Now </a>
+                        <a class="hvr-outline-out button2" href="~/images/banner3.jpg">Shop Now </a>
                     </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="carousel-caption">
                         <h3>The Biggest <span>Sale</span></h3>
                         <p>Special for today</p>
-                        <a class="hvr-outline-out button2" href="~/images/New folder/banner4.jpg">Shop Now </a>
+                        <a class="hvr-outline-out button2" href="~/images/banner4.jpg">Shop Now </a>
                     </div>
                 </div>
             </div>
