--- a/EcommerceUserPanel/Views/Brand/Index.cshtml
+++ b/EcommerceUserPanel/Views/Brand/Index.cshtml
@@ -33,7 +33,7 @@
                 @Html.DisplayFor(modelItem => item.BrandDescription)
             </td>
             <td>
-                <a asp-controller="Brand" asp-action="ProductDisplay" asp-route-id="@item.BrandId" class="btn btn-sm btn-outline-secondary">Choose</a> 
+                <a asp-controller="Brand" asp-action="BrandDisplay" asp-route-id="@item.BrandId" class="btn btn-sm btn-outline-secondary">Choose</a> 
             </td>
         </tr>
         }
