--- a/EcommerceUserPanel/Views/Cart/Invoice.cshtml
+++ b/EcommerceUserPanel/Views/Cart/Invoice.cshtml
@@ -43,6 +43,17 @@
                         Springfield, ST 54321
                     </address>
                 </div>
+                @*<div class="col-xs-6 text-right">
+                    <address>
+                        <strong>Payment Details:</strong><br>
+                        @ViewBag.pay.OrderId<br>
+                        @ViewBag.pay.CustomerId<br>
+                        @ViewBag.pay.PaymentId<br>
+                        @ViewBag.pay.PaymentStrippedId<br>
+
+
+                    </address>
+                </div>*@
             </div>
             @*<div class="row">
                 <div class="col-xs-6">
