--- a/EcommerceUserPanel/Views/ProductCategory/Index.cshtml
+++ b/EcommerceUserPanel/Views/ProductCategory/Index.cshtml
@@ -37,7 +37,7 @@
                     @Html.DisplayFor(modelItem => item.CategoryDescription)
                 </td>
                 <td>
-                    <a asp-controller="ProductCategory" asp-action="Display" asp-route-id="@item.ProductCategoryId" class="btn btn-sm btn-outline-secondary">Choose</a>
+                    <a asp-controller="ProductCategory" asp-action="ProDisplay" asp-route-id="@item.ProductCategoryId" class="btn btn-sm btn-outline-secondary">Choose</a>
 
                 </td>
             </tr>
