--- a/EcommerceUserPanel/Views/ProductCategory/ProDisplay.cshtml
+++ b/EcommerceUserPanel/Views/ProductCategory/ProDisplay.cshtml
@@ -1,10 +1,8 @@
 ﻿@model IEnumerable<EcommerceUserPanel.Models.Products>
 @{
-    ViewData["Title"] = "Display";
+    ViewData["Title"] = "ProDisplay";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
-
-
 
 <h2>ProductDisplay</h2>
 
@@ -41,3 +39,4 @@
         </div>
     </div>
 </div>
+
